[gd_scene load_steps=13 format=3 uid="uid://dv0g1jn3n7ini"]

[ext_resource type="Script" uid="uid://dm4f85m18rkkw" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://dyq7dh6jlegru" path="res://Sprites/Characters/character_0000.png" id="1_v0iea"]
[ext_resource type="Texture2D" uid="uid://boym8rwk8fqpe" path="res://Sprites/Characters/character_0001.png" id="3_6t5aa"]
[ext_resource type="Script" uid="uid://cqvfe1c2stiki" path="res://Scenes/player_ui.gd" id="4_fkybt"]
[ext_resource type="Texture2D" uid="uid://miq1be7j6s70" path="res://Sprites/Objects/tile_0044.png" id="4_vgqql"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cvnsp"]
height = 23.0

[sub_resource type="Animation" id="Animation_fkybt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_v0iea")]
}

[sub_resource type="Animation" id="Animation_vgqql"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_v0iea")]
}

[sub_resource type="Animation" id="Animation_3smsa"]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_6t5aa")]
}

[sub_resource type="Animation" id="Animation_x3wgy"]
resource_name = "move"
length = 0.25
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_6t5aa"), ExtResource("1_v0iea")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8erm5"]
_data = {
&"RESET": SubResource("Animation_fkybt"),
&"idle": SubResource("Animation_vgqql"),
&"jump": SubResource("Animation_3smsa"),
&"move": SubResource("Animation_x3wgy")
}

[sub_resource type="LabelSettings" id="LabelSettings_vgqql"]
font_size = 38
outline_color = Color(0, 0, 0, 1)
shadow_size = 9
shadow_color = Color(0, 0, 0, 0.16862746)
shadow_offset = Vector2(0, 0)

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_cvnsp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_v0iea")
offset = Vector2(0, -12)
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11.5)
shape = SubResource("CapsuleShape2D_cvnsp")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -63)
zoom = Vector2(3, 3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Camera2D")
libraries = {
&"": SubResource("AnimationLibrary_8erm5")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="PlayerUI" type="CanvasLayer" parent="."]
script = ExtResource("4_fkybt")

[node name="HealthContainer" type="HBoxContainer" parent="PlayerUI"]
offset_left = 6.0
offset_top = 7.0
offset_right = 134.0
offset_bottom = 87.0

[node name="Heart" type="TextureRect" parent="PlayerUI/HealthContainer"]
layout_mode = 2
texture = ExtResource("4_vgqql")
expand_mode = 3

[node name="Heart2" type="TextureRect" parent="PlayerUI/HealthContainer"]
layout_mode = 2
texture = ExtResource("4_vgqql")
expand_mode = 3

[node name="Heart3" type="TextureRect" parent="PlayerUI/HealthContainer"]
layout_mode = 2
texture = ExtResource("4_vgqql")
expand_mode = 3

[node name="Score" type="Label" parent="PlayerUI"]
offset_left = 822.0
offset_top = 42.0
offset_right = 883.0
offset_bottom = 65.0
text = "Coins: 0"
label_settings = SubResource("LabelSettings_vgqql")

[connection signal="OnUpdateHealth" from="." to="PlayerUI" method="_on_player_on_update_health"]
[connection signal="OnUpdateScore" from="." to="PlayerUI" method="_on_player_on_update_score"]
